@@ -22,6 +22,12 @@ ifeq ($(KVER),up)
   DEFINES += -D__BOOT_KERNEL_SMP=0 
   DEFINES += -D__BOOT_KERNEL_UP=1 
 endif
+ifeq ($(KVER),hugemem)
+  DEFINES += -D__BOOT_KERNEL_HUGEMEM=1 
+  DEFINES += -D__BOOT_KERNEL_ENTERPRISE=0 
+  DEFINES += -D__BOOT_KERNEL_SMP=0 
+  DEFINES += -D__BOOT_KERNEL_UP=0 
+endif
 
 INCLUDES = -I. -I$(TOPDIR)/include -I$(KERNELINC) -I$(GCCINC)
 
